--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Functional Programming - Category Theory",
   "main": "src/index.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "ts-node src/maybe/definition.ts"
   },
   "repository": {
     "type": "git",
